# koii

./: .dockerignore  .gitignore  BUILD_MODERN_UI.md  Dockerfile  Dockerfile.browser  Dockerfile.ubuntu  ELECTRON_BUILDER_FIX_FINAL.md  Koii OS Browser-0.1.0-x64.exe.blockmap  LLM_INTEGRATION_SETUP.md  MODERN_UI_INTEGRATION_CHECKLIST.md  MODERN_UI_INTEGRATION_SUMMARY.md  QUICK_REFERENCE.md  QUICK_START.md  README.md  README_LLM_SETUP.txt  README_MODERN_UI.md  aios-2fa.py  aios-settings.py  docker-compose-browser.yml  docker-compose.yml  docker-entrypoint.sh  docker-start.bat  docker-start.sh  nginx.conf  setup-llm-integration.sh  setup_llm_integration.py
.claude/: settings.local.json
config/: BUILD_SYSTEM_README.md  QUICKSTART.md  binary  bootstrap  common
data/: agent-registry.yaml
electron/: DEPRECATED.md  main.js  package.json  preload.js  renderer.js  ui.html
koii-settings/: INSTALL.md  PROJECT_SUMMARY.md  README.md  meson.build  pyrightconfig.json
koii-settings/data/: meson.build  org.koii.Settings.desktop.in  org.koii.Settings.gschema.xml  org.koii.Settings.metainfo.xml.in
koii-settings/po/: POTFILES  meson.build
koii-settings/scripts/: build.sh  post-install.sh
koii-settings/src/: __init__.py  backend.py  config.py  keyring.py  koii-settings.in  main.py  meson.build  window.py
koii-settings/src/pages/: __init__.py  agents_page.py  base_page.py  browser_page.py  security_page.py  system_page.py  tasks_page.py
scripts/: build_aios.sh  create_ai_browser_app.sh  demo_browser_automation.py  install-koii-control-center.sh  koii  koii.cmd  nats_multinode_integration.py  nats_transport_smoke.py  verify_iso_contents.sh
src/: __init__.py  koii_cli.py  koii_web.py  main.py
static/: index.html
tests/: run_all_tests.py  test_browser_features.py  test_semantic_agent.py  (+1 more)
(+153 files in other folders)
